# escalibr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cone_fitting.py  line_fitting.py  output.xml  package.xml
config/: calibrate_config.yaml
doc/: manifest.yaml
doc/html/: EllipseMath_8cpp.html  EllipseMath_8cpp_source.html  annotated.html  calibrate_8cpp.html  calibrate_8cpp__incl.map  calibrate_8cpp__incl.md5  calibrate_8cpp_source.html  classes.html  classescalibr_1_1EchoSounderCameraHandler-members.html  classescalibr_1_1EchoSounderCameraHandler.html  dir_000000_000001.html  dir_1549cf8b2433447cc7e3abb99f3eee9d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  echo__sounder__camera__handler_8cpp.html  echo__sounder__camera__handler_8cpp__incl.map  echo__sounder__camera__handler_8cpp__incl.md5  echo__sounder__camera__handler_8cpp_source.html  echo__sounder__camera__handler_8h.html  echo__sounder__camera__handler_8h__dep__incl.map  echo__sounder__camera__handler_8h__dep__incl.md5  echo__sounder__camera__handler_8h__incl.map  echo__sounder__camera__handler_8h__incl.md5  echo__sounder__camera__handler_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index-msg.html  index.html  namespaceescalibr.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  structescalibr_1_1AppEllipse-members.html  structescalibr_1_1AppEllipse.html
include/escalibr/: EchoSounderCameraHandler.h  calibration_gui.h  calibration_math.h  echo_sounder_camera_extractor.h  echo_sounder_camera_handler.h  ellipse_math.h  image_proc.h
launch/: coarse_calibration.launch  image_depth_extr.launch  super_coarse_calibration.launch  tester.launch
params/: camera_params.yaml
scripts/: extrinsic_calibration.py
src/: EchoSounderCameraHandler.cpp  calibrate.cpp  calibration_gui.cpp  calibration_math.cpp  echo_sounder_camera_extractor.cpp  echo_sounder_camera_handler.cpp  ellipse_math.cpp  extract.cpp  image_proc.cpp
src/Options/: super_coarse.cpp
